[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Player.png" type="Texture" id=1]
[ext_resource path="res://Assets/Exhaust.png" type="Texture" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Player/Gun.gd" type="Script" id=4]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 512, 300 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Exhaust" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 20 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 0, 11, -10, 15, -15, 8, -2, -15, 3, -13, 3, -11, 14, 8, 15, 9, 8, 15 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 5, -25.2, 5, -22.5, 28.3, 17, 27.2, 19, 25.9, 19, 17.9, 28, 13.6, 28, -0.700001, 21.7, -19, 29, -19, 25.9, -28, 17.9, -28, 14.4, -3, -25.6, -3, -29.2 )

[node name="Primary" type="Node2D" parent="."]

[node name="Gun" type="Node2D" parent="Primary"]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Primary/Gun"]
wait_time = 0.085
one_shot = true

[node name="invuln" type="Timer" parent="."]

[node name="ScoreDrain" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Primary/Gun/Timer" to="Primary/Gun" method="_on_Timer_timeout"]
[connection signal="timeout" from="invuln" to="." method="_on_invuln_timeout"]
[connection signal="timeout" from="ScoreDrain" to="." method="_on_ScoreDrain_timeout"]
